自己学习的项目

--- a/ssz-service-product/pom.xml
+++ b/ssz-service-product/pom.xml
@@ -18,6 +18,7 @@
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.1.5</version>
         </dependency>
 <!--        &lt;!&ndash;mysql JDBC驱动&ndash;&gt;-->
 <!--        <dependency>-->
