--- a/ssz-dependencies/ssz-parent/pom.xml
+++ b/ssz-dependencies/ssz-parent/pom.xml
@@ -58,9 +58,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--seata依赖 start-->
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-spring-boot-starter</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-alibaba-seata</artifactId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+            <version>2.2.1.RELEASE</version>
             <exclusions>
                 <exclusion>
                     <groupId>io.seata</groupId>
@@ -68,9 +74,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>io.seata</groupId>
-            <artifactId>seata-spring-boot-starter</artifactId>
-        </dependency>
+        <!--seata依赖 end-->
     </dependencies>
 </project>
