--- a/ssz-api/pom.xml
+++ b/ssz-api/pom.xml
@@ -15,7 +15,11 @@
 	<name>Ssz Api</name>
 
 	<dependencies>
-
+		<!--feign-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
