--- a/ssz-dependencies/pom.xml
+++ b/ssz-dependencies/pom.xml
@@ -75,7 +75,7 @@
                 <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
                 <version>${alibaba.cloud.version}</version>
             </dependency>
-            <!-- nacos 作为服务注册中心 -->
+            <!-- nacos 作为配置中心 -->
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
