--- a/ssz-api/src/main/resources/bootstrap.yml
+++ b/ssz-api/src/main/resources/bootstrap.yml
@@ -18,7 +18,9 @@ server:
 feign:
   sentinel:
     enabled: true
-  httpclient:
-    connection-timeout: 50000
+ribbon:
+  ConnectTimeout: 10000
+  ReadTimeout: 100000
+  OkToRetryOnAllOperations: false
 
 
