提交忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /ssz-api/target/
 /ssz-dependencies/ssz-common/target
 /ssz-dependencies/ssz-model/target
-/ssz-service-product/ssz-service-product.iml
+/ssz-service-product/target
+/ssz-service-user/target
