--- a/ssz-dependencies/pom.xml
+++ b/ssz-dependencies/pom.xml
@@ -178,6 +178,22 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.4</version>
             </dependency>
+            <!-- mybatis plus 代码生成器 -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>3.2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-generator</artifactId>
+                <version>3.2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>2.3.28</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
