--- a/ssz-service-product/src/main/resources/application.yml
+++ b/ssz-service-product/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.237.129:3306/ssz-service-product?autoReconnect=true&useSSL=false&serverTimezone=UTC&useAffectedRows=true
+    url: jdbc:mysql://192.168.237.129:3306/ssz-service-product?autoReconnect=true&useSSL=false&useAffectedRows=true
     username: root
     password: 123456
 seata:
