--- a/ssz-dependencies/pom.xml
+++ b/ssz-dependencies/pom.xml
@@ -50,6 +50,12 @@
 
     <dependencyManagement>
         <dependencies>
+            <!--redis-->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>2.9.0</version>
+            </dependency>
             <!--feign-->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
