--- a/ssz-dependencies/ssz-parent/pom.xml
+++ b/ssz-dependencies/ssz-parent/pom.xml
@@ -24,6 +24,11 @@
     </modules>
 
     <dependencies>
+        <!--redis-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
         <!--alibaba数据库连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
