--- a/ssz-dependencies/ssz-common/pom.xml
+++ b/ssz-dependencies/ssz-common/pom.xml
@@ -16,6 +16,11 @@
 
 
     <dependencies>
+        <!--redis-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
