--- a/ssz-service-product/src/main/resources/application.yml
+++ b/ssz-service-product/src/main/resources/application.yml
@@ -29,4 +29,4 @@ seata:
       password: ""
   service:
     vgroup-mapping:
-      my_test_tx_group: default
+      ssz-service-product-group: default
