--- a/ssz-service-user/src/main/resources/application.yml
+++ b/ssz-service-user/src/main/resources/application.yml
@@ -9,7 +9,7 @@ seata:
   enabled: true
   enable-auto-data-source-proxy: true
   application-id: ssz-service-user
-  tx-service-group: ssz-service-user-group
+  tx-service-group: my_test_tx_group
   config:
     type: nacos
     nacos:
@@ -29,7 +29,7 @@ seata:
       password: ""
   service:
     vgroup-mapping:
-      ssz-service-user-group: default
+      my_test_tx_group: default
 
 mybatis-plus:
   global-config:
