--- a/ssz-dependencies/ssz-common/pom.xml
+++ b/ssz-dependencies/ssz-common/pom.xml
@@ -16,6 +16,15 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
         <!--redis-->
         <dependency>
             <groupId>redis.clients</groupId>
