--- a/ssz-service-user/src/main/resources/application.yml
+++ b/ssz-service-user/src/main/resources/application.yml
@@ -48,7 +48,7 @@ mybatis-plus:
 
 redis:
   host: 192.168.237.129
-  post: 6379
+  port: 6379
   password: 123456
   max-total: 5000
   max-idle: 100
