--- a/ssz-service-user/src/main/resources/bootstrap.yml
+++ b/ssz-service-user/src/main/resources/bootstrap.yml
@@ -13,6 +13,7 @@ spring:
         server-addr: 192.168.237.129:8848
         username: "nacos"
         password: "nacos"
+        file-extension: yaml
 server:
   port: 1002
 feign:
