--- a/ssz-service-user/src/main/resources/application.yml
+++ b/ssz-service-user/src/main/resources/application.yml
@@ -2,14 +2,14 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/ssz-service-user?autoReconnect=true&useSSL=false&useAffectedRows=true
+    url: jdbc:mysql://127.0.0.1:3306/ssz-service-user?autoReconnect=true&useSSL=false&useAffectedRows=true&allowPublicKeyRetrieval=true
     username: root
     password: ssz1314..
 seata:
   enabled: true
   enable-auto-data-source-proxy: true
   application-id: ssz-service-user
-  tx-service-group: my_test_tx_group
+  tx-service-group: my_tx_group
   config:
     type: nacos
     nacos:
@@ -29,7 +29,7 @@ seata:
       password: ""
   service:
     vgroup-mapping:
-      my_test_tx_group: default
+      my_tx_group: default
 
 mybatis-plus:
   global-config:
