--- a/ssz-service-user/src/main/resources/application.yml
+++ b/ssz-service-user/src/main/resources/application.yml
@@ -2,12 +2,11 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/ssz-service-user?autoReconnect=true&useSSL=false&useAffectedRows=true&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://127.0.0.1:3306/ssz-service-user?autoReconnect=true&useSSL=false&useAffectedRows=true
     username: root
     password: ssz1314..
 seata:
   enabled: true
-  enable-auto-data-source-proxy: true
   application-id: ssz-service-user
   tx-service-group: my_tx_group
   config:
@@ -34,7 +33,6 @@ seata:
 mybatis-plus:
   global-config:
     db-config:
-      id-type: auto
       db-type: mysql
       field-strategy: not-empty
       logic-delete-value: 1
