--- a/ssz-api/src/main/resources/bootstrap.yml
+++ b/ssz-api/src/main/resources/bootstrap.yml
@@ -13,6 +13,7 @@ spring:
         server-addr: 127.0.0.1:8848
         username: "nacos"
         password: "nacos"
+        file-extension: yml
 server:
   port: 1000
 feign:
