--- a/ssz-dependencies/ssz-common/pom.xml
+++ b/ssz-dependencies/ssz-common/pom.xml
@@ -47,6 +47,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
