--- a/ssz-service-user/src/main/resources/application.yml
+++ b/ssz-service-user/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/ssz-service-user?autoReconnect=true&useSSL=false&useAffectedRows=true
+    url: jdbc:mysql://127.0.0.1:3306/ssz-service-user?autoReconnect=true&useSSL=false&useAffectedRows=true&serverTimezone=UTC
     username: root
     password: ssz1314..
 seata:
