--- a/ssz-dependencies/ssz-parent/pom.xml
+++ b/ssz-dependencies/ssz-parent/pom.xml
@@ -15,12 +15,12 @@
     <artifactId>ssz-parent</artifactId>
     <packaging>pom</packaging>
     <name>ssz Parent</name>
-    <description>ssz Parent</description>
 
     <modules>
         <module>../../ssz-api</module>
         <module>../../ssz-service-product</module>
         <module>../../ssz-service-user</module>
+        <module>../../ssz-gateway/ssz-gateway</module>
     </modules>
 
     <dependencies>
