--- a/ssz-gateway/ssz-gateway/pom.xml
+++ b/ssz-gateway/ssz-gateway/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <version>1.0-SNAPSHOT</version>
 
     <parent>
         <groupId>com.ssz</groupId>
         <artifactId>ssz-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../ssz-dependencies/ssz-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>ssz-gateway</artifactId>
@@ -19,10 +19,7 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+
         </plugins>
     </build>
 
