--- a/ssz-gateway/ssz-gateway/src/main/resources/bootstrap.yml
+++ b/ssz-gateway/ssz-gateway/src/main/resources/bootstrap.yml
@@ -4,6 +4,15 @@ spring:
   main:
     allow-bean-definition-overriding: true
   cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+      routes:
+        id: api
+        uri: lb://http://api
+        predicates:
+          - Path=/api/**
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
@@ -14,6 +23,9 @@ spring:
         username: "nacos"
         password: "nacos"
         file-extension: yml
+        extension-configs:
+          dataId: ssz-gateway.yml
+          refresh: true
 server:
   port: 1004
 
