--- a/ssz-api/src/main/resources/bootstrap.yml
+++ b/ssz-api/src/main/resources/bootstrap.yml
@@ -16,6 +16,9 @@ spring:
         file-extension: yml
 server:
   port: 1000
+  servlet:
+    context-path: /api
+
 feign:
   sentinel:
     enabled: true
