--- a/ssz-dependencies/ssz-parent/pom.xml
+++ b/ssz-dependencies/ssz-parent/pom.xml
@@ -28,11 +28,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!--mysql JDBC驱动-->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
         <!--验证注解-->
         <dependency>
             <groupId>org.hibernate.validator</groupId>
@@ -46,6 +41,11 @@
         <dependency>
             <groupId>com.ssz</groupId>
             <artifactId>ssz-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ssz</groupId>
+            <artifactId>ssz-mul</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--nacos做注册中心-->
