--- a/ssz-dependencies/pom.xml
+++ b/ssz-dependencies/pom.xml
@@ -51,6 +51,12 @@
 
     <dependencyManagement>
         <dependencies>
+            <!--gateway依赖 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-gateway</artifactId>
+                <version>2.2.5.RELEASE</version>
+            </dependency>
             <!--redis-->
             <dependency>
                 <groupId>redis.clients</groupId>
