--- a/ssz-gateway/ssz-gateway/pom.xml
+++ b/ssz-gateway/ssz-gateway/pom.xml
@@ -6,8 +6,9 @@
 
     <parent>
         <groupId>com.ssz</groupId>
-        <artifactId>ssz-parent</artifactId>
+        <artifactId>ssz-dependencies</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../ssz-dependencies/pom.xml</relativePath>
     </parent>
 
     <artifactId>ssz-gateway</artifactId>
@@ -18,7 +19,6 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
-            <version>2.2.5.RELEASE</version>
         </dependency>
     </dependencies>
 
