--- a/ssz-dependencies/ssz-parent/pom.xml
+++ b/ssz-dependencies/ssz-parent/pom.xml
@@ -24,6 +24,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.ssz</groupId>
+            <artifactId>ssz-mul</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -40,11 +45,6 @@
         <dependency>
             <groupId>com.ssz</groupId>
             <artifactId>ssz-model</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.ssz</groupId>
-            <artifactId>ssz-mul</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--nacos做注册中心-->
