--- a/ssz-dependencies/pom.xml
+++ b/ssz-dependencies/pom.xml
@@ -22,6 +22,7 @@
         <module>ssz-model</module>
         <module>ssz-common</module>
         <module>ssz-parent</module>
+        <module>../ssz-gateway/ssz-gateway</module>
     </modules>
     <properties>
 
@@ -50,11 +51,10 @@
 
     <dependencyManagement>
         <dependencies>
-            <!--gateway依赖 -->
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-gateway</artifactId>
-                <version>2.2.5.RELEASE</version>
+                <groupId>com.ssz</groupId>
+                <artifactId>ssz-mul</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <!--redis-->
             <dependency>
