--- a/ssz-gateway/ssz-gateway/pom.xml
+++ b/ssz-gateway/ssz-gateway/pom.xml
@@ -15,6 +15,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.ssz</groupId>
+            <artifactId>ssz-mul</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
