--- a/ssz-dependencies/pom.xml
+++ b/ssz-dependencies/pom.xml
@@ -52,6 +52,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.80</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.ssz</groupId>
                 <artifactId>ssz-mul</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
