--- a/ssz-gateway/ssz-gateway/pom.xml
+++ b/ssz-gateway/ssz-gateway/pom.xml
@@ -15,8 +15,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.ssz</groupId>
             <artifactId>ssz-mul</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ssz</groupId>
+            <artifactId>ssz-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
