--- a/ssz-dependencies/ssz-parent/pom.xml
+++ b/ssz-dependencies/ssz-parent/pom.xml
@@ -23,6 +23,10 @@
     </modules>
 
     <dependencies>
+<!--        <dependency>-->
+<!--            <groupId>com.ssz</groupId>-->
+<!--            <artifactId>ssz-mul</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
