--- a/ssz-dependencies/ssz-parent/pom.xml
+++ b/ssz-dependencies/ssz-parent/pom.xml
@@ -23,13 +23,9 @@
     </modules>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>com.ssz</groupId>-->
-<!--            <artifactId>ssz-mul</artifactId>-->
-<!--        </dependency>-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.ssz</groupId>
+            <artifactId>ssz-mul</artifactId>
         </dependency>
         <!--验证注解-->
         <dependency>
