--- a/ssz-service-product/src/main/resources/bootstrap.yml
+++ b/ssz-service-product/src/main/resources/bootstrap.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: ssz-service-product
+  profiles:
+    active: dev
   main:
     allow-bean-definition-overriding: true
   cloud:
