--- a/ssz-service-user/src/main/resources/bootstrap.yml
+++ b/ssz-service-user/src/main/resources/bootstrap.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: ssz-service-user
+  profiles:
+    active: dev
   main:
     allow-bean-definition-overriding: true
   cloud:
