--- a/ssz-service-product/pom.xml
+++ b/ssz-service-product/pom.xml
@@ -16,12 +16,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-generator</artifactId>
+            <groupId>com.ssz</groupId>
+            <artifactId>ssz-mul</artifactId>
         </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
