--- a/ssz-api/pom.xml
+++ b/ssz-api/pom.xml
@@ -6,9 +6,9 @@
 
 	<parent>
 		<groupId>com.ssz</groupId>
-		<artifactId>ssz-parent</artifactId>
+		<artifactId>ssz-dependencies</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath>../ssz-dependencies/ssz-parent/pom.xml</relativePath>
+		<relativePath>../ssz-dependencies/pom.xml</relativePath>
 	</parent>
 
 	<artifactId>ssz-api</artifactId>
@@ -19,6 +19,31 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.ssz</groupId>
+			<artifactId>ssz-model</artifactId>
+		</dependency>
+		<!--seata start-->
+		<dependency>
+			<groupId>io.seata</groupId>
+			<artifactId>seata-spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>io.seata</groupId>
+					<artifactId>seata-spring-boot-starter</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!--seata end-->
+		<dependency>
+			<groupId>com.ssz</groupId>
+			<artifactId>ssz-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
