--- a/ssz-dependencies/pom.xml
+++ b/ssz-dependencies/pom.xml
@@ -23,6 +23,7 @@
         <module>ssz-common</module>
         <module>ssz-parent</module>
         <module>../ssz-gateway/ssz-gateway</module>
+        <module>../ssz-api</module>
     </modules>
     <properties>
 
@@ -56,7 +57,11 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.2.80</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.ssz</groupId>
+                <artifactId>ssz-model</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
             <dependency>
                 <groupId>com.ssz</groupId>
                 <artifactId>ssz-mul</artifactId>
