--- a/ssz-dependencies/ssz-parent/pom.xml
+++ b/ssz-dependencies/ssz-parent/pom.xml
@@ -17,7 +17,6 @@
     <name>ssz Parent</name>
 
     <modules>
-        <module>../../ssz-api</module>
         <module>../../ssz-service-product</module>
         <module>../../ssz-service-user</module>
     </modules>
@@ -39,7 +38,7 @@
         <dependency>
             <groupId>com.ssz</groupId>
             <artifactId>ssz-common</artifactId>
-            <version>${project.version}</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.ssz</groupId>
