--- a/ssz-service-product/src/main/resources/bootstrap-dev.yml
+++ b/ssz-service-product/src/main/resources/bootstrap-dev.yml
@@ -7,7 +7,6 @@ spring:
     password: ssz1314..
 seata:
   enabled: true
-  application-id: ssz-service-product
   tx-service-group: my_tx_group
   config:
     type: nacos
@@ -52,3 +51,25 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
     auto-mapping-behavior: full
+
+spring:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+        username: "nacos"
+        password: "nacos"
+      config:
+        server-addr: 127.0.0.1:8848
+        username: "nacos"
+        password: "nacos"
+        file-extension: yml
+        extension-configs:
+          - data-id: ssz-redis.yml
+            refresh: true
+          - data-id: ssz-seata.yml
+            refresh: true
+          - data-id: ssz-db-product.yml
+            refresh: true
+          - data-id: ssz-mybatis-plus.yml
+            refresh: true
