--- a/ssz-service-product/pom.xml
+++ b/ssz-service-product/pom.xml
@@ -15,10 +15,10 @@
 
 
     <dependencies>
-        <dependency>
-            <groupId>com.ssz</groupId>
-            <artifactId>ssz-mul</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.ssz</groupId>-->
+<!--            <artifactId>ssz-mul</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
